src/zorg/grammar/zorg_query/ZorgQueryParser.py
# Generated from ZorgQuery.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZorgQueryParser ( Parser ):

    grammarFileName = "ZorgQuery.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'S'", "'W'", "'O'", "'G'", "'note'", 
                     "'or'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", 
                     "'8'", "'9'", "'!'", "'0'", "'<='", "'>='", "'c'", 
                     "'create'", "'modify'", "'priority'", "'file'", "'type'", 
                     "<INVALID>", "'o'", "'x'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'  -'", "'    -'", "<INVALID>", "'$'", "'^'", "'-'", 
                     "'.'", "'/'", "'_'", "' '", "'('", "')'", "'#'", "'@'", 
                     "'+'", "'%'", "'''", "'\"'", "'~'", "'*'", "'<'", "'>'", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NL", "LOWER_O", "LOWER_X", 
                      "DATE", "TIME", "CREATE_RANGE_HEAD", "MODIFY_RANGE_HEAD", 
                      "DATE_RANGE_TAIL", "PRIORITY", "ID", "ZID", "SHORT_DATE", 
                      "NUM_ID", "TWO_SPACE_DASH", "FOUR_SPACE_DASH", "SYMBOL", 
                      "DOLLAR", "HAT", "DASH", "DOT", "FSLASH", "UNDERSCORE", 
                      "SPACE", "LPAREN", "RPAREN", "HASH", "AT_SIGN", "PLUS", 
                      "PERCENT", "SQUOTE", "DQUOTE", "TILDE", "STAR", "LANGLE", 
                      "RANGLE", "COLON" ]

    RULE_prog = 0
    RULE_query = 1
    RULE_where_query = 2
    RULE_select_query = 3
    RULE_select = 4
    RULE_where = 5
    RULE_order_by = 6
    RULE_group_by = 7
    RULE_select_body = 8
    RULE_note = 9
    RULE_where_body = 10
    RULE_or_filter = 11
    RULE_and_filter = 12
    RULE_where_atom = 13
    RULE_note_type = 14
    RULE_note_type_char = 15
    RULE_priority_range = 16
    RULE_tag = 17
    RULE_not_op = 18
    RULE_area = 19
    RULE_context = 20
    RULE_person = 21
    RULE_project = 22
    RULE_subfilter = 23
    RULE_create_range = 24
    RULE_modify_range = 25
    RULE_prop_filter = 26
    RULE_prop_op = 27
    RULE_desc_filter = 28
    RULE_zid = 29
    RULE_id = 30
    RULE_date = 31
    RULE_time = 32
    RULE_any_non_squote = 33
    RULE_non_tag_symbol = 34
    RULE_id_symbol = 35
    RULE_tag_symbol = 36
    RULE_group_by_body = 37
    RULE_group_by_atom = 38
    RULE_order_by_body = 39
    RULE_order_by_atom = 40
    RULE_create = 41
    RULE_modify = 42
    RULE_priority = 43
    RULE_file = 44
    RULE_type = 45

    ruleNames =  [ "prog", "query", "where_query", "select_query", "select", 
                   "where", "order_by", "group_by", "select_body", "note", 
                   "where_body", "or_filter", "and_filter", "where_atom", 
                   "note_type", "note_type_char", "priority_range", "tag", 
                   "not_op", "area", "context", "person", "project", "subfilter", 
                   "create_range", "modify_range", "prop_filter", "prop_op", 
                   "desc_filter", "zid", "id", "date", "time", "any_non_squote", 
                   "non_tag_symbol", "id_symbol", "tag_symbol", "group_by_body", 
                   "group_by_atom", "order_by_body", "order_by_atom", "create", 
                   "modify", "priority", "file", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    NL=26
    LOWER_O=27
    LOWER_X=28
    DATE=29
    TIME=30
    CREATE_RANGE_HEAD=31
    MODIFY_RANGE_HEAD=32
    DATE_RANGE_TAIL=33
    PRIORITY=34
    ID=35
    ZID=36
    SHORT_DATE=37
    NUM_ID=38
    TWO_SPACE_DASH=39
    FOUR_SPACE_DASH=40
    SYMBOL=41
    DOLLAR=42
    HAT=43
    DASH=44
    DOT=45
    FSLASH=46
    UNDERSCORE=47
    SPACE=48
    LPAREN=49
    RPAREN=50
    HASH=51
    AT_SIGN=52
    PLUS=53
    PERCENT=54
    SQUOTE=55
    DQUOTE=56
    TILDE=57
    STAR=58
    LANGLE=59
    RANGLE=60
    COLON=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self):
            return self.getTypedRuleContext(ZorgQueryParser.QueryContext,0)


        def NL(self):
            return self.getToken(ZorgQueryParser.NL, 0)

        def getRuleIndex(self):
            return ZorgQueryParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ZorgQueryParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.query()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 93
                self.match(ZorgQueryParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def where_query(self):
            return self.getTypedRuleContext(ZorgQueryParser.Where_queryContext,0)


        def select_query(self):
            return self.getTypedRuleContext(ZorgQueryParser.Select_queryContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = ZorgQueryParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.where_query()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.select_query()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_queryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def where(self):
            return self.getTypedRuleContext(ZorgQueryParser.WhereContext,0)


        def select(self):
            return self.getTypedRuleContext(ZorgQueryParser.SelectContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ZorgQueryParser.SPACE)
            else:
                return self.getToken(ZorgQueryParser.SPACE, i)

        def order_by(self):
            return self.getTypedRuleContext(ZorgQueryParser.Order_byContext,0)


        def group_by(self):
            return self.getTypedRuleContext(ZorgQueryParser.Group_byContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_where_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_query" ):
                listener.enterWhere_query(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_query" ):
                listener.exitWhere_query(self)




    def where_query(self):

        localctx = ZorgQueryParser.Where_queryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_where_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 100
                self.select()
                self.state = 101
                self.match(ZorgQueryParser.SPACE)


            self.state = 105
            self.where()
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 106
                self.match(ZorgQueryParser.SPACE)
                self.state = 107
                self.order_by()


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==48:
                self.state = 110
                self.match(ZorgQueryParser.SPACE)
                self.state = 111
                self.group_by()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_queryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select(self):
            return self.getTypedRuleContext(ZorgQueryParser.SelectContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_select_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_query" ):
                listener.enterSelect_query(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_query" ):
                listener.exitSelect_query(self)




    def select_query(self):

        localctx = ZorgQueryParser.Select_queryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.select()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(ZorgQueryParser.SPACE, 0)

        def select_body(self):
            return self.getTypedRuleContext(ZorgQueryParser.Select_bodyContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)




    def select(self):

        localctx = ZorgQueryParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_select)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(ZorgQueryParser.T__0)
            self.state = 117
            self.match(ZorgQueryParser.SPACE)
            self.state = 118
            self.select_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(ZorgQueryParser.SPACE, 0)

        def where_body(self):
            return self.getTypedRuleContext(ZorgQueryParser.Where_bodyContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_where

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere" ):
                listener.enterWhere(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere" ):
                listener.exitWhere(self)




    def where(self):

        localctx = ZorgQueryParser.WhereContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_where)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ZorgQueryParser.T__1)
            self.state = 121
            self.match(ZorgQueryParser.SPACE)
            self.state = 122
            self.where_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Order_byContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(ZorgQueryParser.SPACE, 0)

        def order_by_body(self):
            return self.getTypedRuleContext(ZorgQueryParser.Order_by_bodyContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_order_by

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrder_by" ):
                listener.enterOrder_by(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrder_by" ):
                listener.exitOrder_by(self)




    def order_by(self):

        localctx = ZorgQueryParser.Order_byContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_order_by)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ZorgQueryParser.T__2)
            self.state = 125
            self.match(ZorgQueryParser.SPACE)
            self.state = 126
            self.order_by_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Group_byContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(ZorgQueryParser.SPACE, 0)

        def group_by_body(self):
            return self.getTypedRuleContext(ZorgQueryParser.Group_by_bodyContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_group_by

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup_by" ):
                listener.enterGroup_by(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup_by" ):
                listener.exitGroup_by(self)




    def group_by(self):

        localctx = ZorgQueryParser.Group_byContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_group_by)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(ZorgQueryParser.T__3)
            self.state = 129
            self.match(ZorgQueryParser.SPACE)
            self.state = 130
            self.group_by_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_(self):
            return self.getTypedRuleContext(ZorgQueryParser.FileContext,0)


        def note(self):
            return self.getTypedRuleContext(ZorgQueryParser.NoteContext,0)


        def AT_SIGN(self):
            return self.getToken(ZorgQueryParser.AT_SIGN, 0)

        def HASH(self):
            return self.getToken(ZorgQueryParser.HASH, 0)

        def PLUS(self):
            return self.getToken(ZorgQueryParser.PLUS, 0)

        def PERCENT(self):
            return self.getToken(ZorgQueryParser.PERCENT, 0)

        def getRuleIndex(self):
            return ZorgQueryParser.RULE_select_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_body" ):
                listener.enterSelect_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_body" ):
                listener.exitSelect_body(self)




    def select_body(self):

        localctx = ZorgQueryParser.Select_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_select_body)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.file_()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.note()
                pass
            elif token in [52]:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(ZorgQueryParser.AT_SIGN)
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.match(ZorgQueryParser.HASH)
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 5)
                self.state = 136
                self.match(ZorgQueryParser.PLUS)
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.match(ZorgQueryParser.PERCENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_note

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNote" ):
                listener.enterNote(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNote" ):
                listener.exitNote(self)




    def note(self):

        localctx = ZorgQueryParser.NoteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_note)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(ZorgQueryParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_filter(self):
            return self.getTypedRuleContext(ZorgQueryParser.Or_filterContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_where_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_body" ):
                listener.enterWhere_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_body" ):
                listener.exitWhere_body(self)




    def where_body(self):

        localctx = ZorgQueryParser.Where_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_where_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.or_filter()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_filterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_filter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZorgQueryParser.And_filterContext)
            else:
                return self.getTypedRuleContext(ZorgQueryParser.And_filterContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ZorgQueryParser.SPACE)
            else:
                return self.getToken(ZorgQueryParser.SPACE, i)

        def getRuleIndex(self):
            return ZorgQueryParser.RULE_or_filter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_filter" ):
                listener.enterOr_filter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_filter" ):
                listener.exitOr_filter(self)




    def or_filter(self):

        localctx = ZorgQueryParser.Or_filterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_or_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.and_filter()
            self.state = 151
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 145
                    self.match(ZorgQueryParser.SPACE)
                    self.state = 146
                    self.match(ZorgQueryParser.T__5)
                    self.state = 147
                    self.match(ZorgQueryParser.SPACE)
                    self.state = 148
                    self.and_filter() 
                self.state = 153
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_filterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def where_atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZorgQueryParser.Where_atomContext)
            else:
                return self.getTypedRuleContext(ZorgQueryParser.Where_atomContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(ZorgQueryParser.SPACE)
            else:
                return self.getToken(ZorgQueryParser.SPACE, i)

        def getRuleIndex(self):
            return ZorgQueryParser.RULE_and_filter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_filter" ):
                listener.enterAnd_filter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_filter" ):
                listener.exitAnd_filter(self)




    def and_filter(self):

        localctx = ZorgQueryParser.And_filterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_and_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.where_atom()
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 155
                    self.match(ZorgQueryParser.SPACE)
                    self.state = 156
                    self.where_atom() 
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def note_type(self):
            return self.getTypedRuleContext(ZorgQueryParser.Note_typeContext,0)


        def priority_range(self):
            return self.getTypedRuleContext(ZorgQueryParser.Priority_rangeContext,0)


        def tag(self):
            return self.getTypedRuleContext(ZorgQueryParser.TagContext,0)


        def subfilter(self):
            return self.getTypedRuleContext(ZorgQueryParser.SubfilterContext,0)


        def create_range(self):
            return self.getTypedRuleContext(ZorgQueryParser.Create_rangeContext,0)


        def modify_range(self):
            return self.getTypedRuleContext(ZorgQueryParser.Modify_rangeContext,0)


        def prop_filter(self):
            return self.getTypedRuleContext(ZorgQueryParser.Prop_filterContext,0)


        def desc_filter(self):
            return self.getTypedRuleContext(ZorgQueryParser.Desc_filterContext,0)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_where_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_atom" ):
                listener.enterWhere_atom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_atom" ):
                listener.exitWhere_atom(self)




    def where_atom(self):

        localctx = ZorgQueryParser.Where_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_where_atom)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.note_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.priority_range()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.tag()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.subfilter()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.create_range()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 167
                self.modify_range()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 168
                self.prop_filter()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 169
                self.desc_filter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Note_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def note_type_char(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZorgQueryParser.Note_type_charContext)
            else:
                return self.getTypedRuleContext(ZorgQueryParser.Note_type_charContext,i)


        def getRuleIndex(self):
            return ZorgQueryParser.RULE_note_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNote_type" ):
                listener.enterNote_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNote_type" ):
                listener.exitNote_type(self)




    def note_type(self):

        localctx = ZorgQueryParser.Note_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_note_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 172
                self.note_type_char()
                self.state = 175 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1873515037574823936) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Note_type_charContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH(self):
            return self.getToken(ZorgQueryParser.DASH, 0)

        def LOWER_O(self):
            return self.getToken(ZorgQueryParser.LOWER_O, 0)

        def LOWER_X(self):
            return self.getToken(ZorgQueryParser.LOWER_X, 0)

        def TILDE(self):
            return self.getToken(ZorgQueryParser.TILDE, 0)

        def LANGLE(self):
            return self.getToken(ZorgQueryParser.LANGLE, 0)

        def RANGLE(self):
            return self.getToken(ZorgQueryParser.RANGLE, 0)

        def getRuleIndex(self):
            return ZorgQueryParser.RULE_note_type_char

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNote_type_char" ):
                listener.enterNote_type_char(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNote_type_char" ):
                listener.exitNote_type_char(self)



